# shroudb

./: .dockerignore  .gitignore  ABOUT.md  AGENTS.md  ARCHITECTURE.md  CAS.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  DOCKER.md  DOCS.md  Dockerfile  ISSUES.md  LICENSE-APACHE-2.0  PROJECT.md  PROTOCOL.md  README.md  REPLICATION_PLAN.md  RUBY.md  SESSION_PLAN.md  V1_RELEASE.md  V1_REMAINING.md  V2_PLANS.md  config.example.toml  docker-compose.yml  keyva.service  protocol.toml  shroudb-store.md  shroudb.service
.githooks/: pre-commit
.github/workflows/: ci.yml  fuzz.yml  release.yml
fuzz/: Cargo.toml  Dockerfile
fuzz/corpus/command_parser/: seed_config_get  seed_config_set  seed_delete  seed_get  seed_list  seed_ns_create  seed_ns_drop  seed_put  seed_rekey
fuzz/corpus/resp3_parser/: seed_array  seed_error  seed_integer  seed_map  seed_put_command
fuzz/fuzz_targets/: acl_check.rs  command_parser.rs  config_parser.rs  meta_schema_validate.rs  resp3_parser.rs  wal_entry.rs
helm/keyva/: Chart.yaml  values.yaml
helm/keyva/templates/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
helm/shroudb/: .helmignore  Chart.yaml  values.yaml
helm/shroudb/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
helm/shroudb/templates/tests/: test-connection.yaml
k6/: api-key-lifecycle.js  auth-lifecycle.js  hmac-sign-verify.js  mixed-workload.js  password-lifecycle.js  refresh-token-rotation.js
keyva-auth/: Cargo.toml
keyva-auth/src/: config.rs  cookies.rs  main.rs  rate_limit.rs  routes.rs  state.rs
keyva-cli/: Cargo.toml
keyva-cli/src/: main.rs
keyva-client/: Cargo.toml
keyva-client/src/: builder.rs  connection.rs  error.rs  lib.rs  response.rs
keyva-client/tests/: integration.rs
keyva-client/tests/common/: mod.rs
keyva-codegen/: Cargo.toml
keyva-codegen/src/: generator.rs  lib.rs  main.rs
keyva-codegen/src/generators/: go.rs  python.rs  ruby.rs  typescript.rs
keyva-protocol/: Cargo.toml
keyva-protocol/src/: auth.rs  command.rs  dispatch.rs  error.rs  events.rs  idempotency.rs  lib.rs  webhooks.rs
keyva-protocol/src/handlers/: config.rs  health.rs  inspect.rs  issue.rs  jwks.rs  keys.rs  keystate.rs  password.rs  refresh.rs  revoke.rs  rotate.rs  schema.rs  subscribe.rs  suspend.rs  update.rs  verify.rs
keyva-protocol/src/resp3/: serialize.rs
keyva-rest/: Cargo.toml
keyva-rest/src/: error.rs  json.rs  lib.rs  routes.rs
keyva-server/: Cargo.toml
keyva-server/src/: config.rs  connection.rs  main.rs  scheduler.rs  server.rs
keyva-server/tests/: load_test.rs  memory_test.rs
keyva-server/tests/common/: mod.rs
shroudb-cli/: Cargo.toml
shroudb-cli/src/: main.rs
shroudb-client/: Cargo.toml
shroudb-client/src/: builder.rs  builders.rs  connection.rs  error.rs  lib.rs  remote_store.rs  response.rs
shroudb-client/tests/: integration.rs  smoke.rs
shroudb-client/tests/common/: mod.rs
shroudb-codegen/: Cargo.toml
shroudb-codegen/src/: generator.rs  main.rs
shroudb-codegen/src/generators/: go.rs  mod.rs  python.rs  ruby.rs  typescript.rs
shroudb-protocol/: Cargo.toml
shroudb-protocol/src/: acl.rs  auth.rs  command.rs  dispatch.rs  error.rs  idempotency.rs  lib.rs  response.rs  webhooks.rs
shroudb-protocol/src/handlers/: command_list.rs  config.rs  del_if.rs  del_prefix.rs  delete.rs  get.rs  health.rs  inspect.rs  issue.rs  jwks.rs  keys.rs  keyspace_create.rs  keystate.rs  list.rs  mod.rs  namespace.rs  password.rs  put.rs  put_if.rs  refresh.rs  rekey.rs  revoke.rs  rotate.rs  schema.rs  subscribe.rs  suspend.rs  update.rs  verify.rs  versions.rs
shroudb-protocol/src/resp3/: mod.rs  parse_command.rs  reader.rs  serialize.rs  writer.rs
shroudb-server/: Cargo.toml
shroudb-server/src/: config.rs  connection.rs  main.rs  reload.rs  scheduler.rs  server.rs  webhooks.rs
shroudb-server/tests/: harness.rs  integration.rs  load_test.rs  memory_test.rs
shroudb-server/tests/common/: mod.rs
