[workspace]
resolver = "3"
default-members = ["shroudb-server"]
members = [
    "shroudb-server",
    "shroudb-protocol",
    "shroudb-client",
    "shroudb-cli",
]
exclude = ["fuzz"]

[workspace.package]
version = "1.0.8"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = ["shroudb"]

[workspace.dependencies]
# Internal crates
shroudb-protocol = { path = "shroudb-protocol", version = "1.0.7", registry = "shroudb" }
shroudb-client = { path = "shroudb-client", version = "1.0.7", registry = "shroudb" }

# Commons crates (shroudb registry)
shroudb-acl = { version = "0.2.0", registry = "shroudb" }
shroudb-crypto = { version = "0.1.1", registry = "shroudb" }
shroudb-storage = { version = "0.2.17", registry = "shroudb" }
shroudb-store = { version = "0.1.3", registry = "shroudb" }
shroudb-server-tcp = { version = "0.2.1", registry = "shroudb" }
shroudb-telemetry = { version = "0.1.0", registry = "shroudb" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
postcard = { version = "1", features = ["alloc"] }

# Crypto
ring = "0.17"

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pki-types = { version = "1", features = ["std"] }
tokio-rustls = "0.26"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Utilities
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
bytes = "1"
hex = "0.4"
rustyline = { version = "17", features = ["derive"] }
crc32fast = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
tower-http = { version = "0.6", features = ["cors"] }
