[package]
name = "shroudb-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1", features = ["rt", "io-util"] }
shroudb-protocol = { path = "../shroudb-protocol" }
shroudb-storage = { git = "https://github.com/shroudb/commons.git", tag = "v0.1.0" }
toml = "1"

[[bin]]
name = "resp3_parser"
path = "fuzz_targets/resp3_parser.rs"
doc = false

[[bin]]
name = "wal_entry"
path = "fuzz_targets/wal_entry.rs"
doc = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
doc = false
