[package]
name = "keyva-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "keyva-auth"
path = "src/main.rs"

[dependencies]
keyva-core.workspace = true
keyva-crypto.workspace = true
keyva-protocol.workspace = true
keyva-storage.workspace = true

axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
ring.workspace = true
uuid.workspace = true
tower-http.workspace = true
libc.workspace = true
