[package]
name = "keyva-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client SDK generator for the Keyva protocol"

[[bin]]
name = "keyva-codegen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
heck = "0.5"
