[package]
name = "keyva-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
keyva-core.workspace = true
keyva-crypto.workspace = true
keyva-storage.workspace = true

bytes.workspace = true
dashmap.workspace = true
reqwest.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
tokio.workspace = true
uuid.workspace = true
