[package]
name = "keyva"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "keyva"
path = "src/main.rs"

[dependencies]
keyva-core.workspace = true
keyva-crypto.workspace = true
keyva-protocol.workspace = true
keyva-rest.workspace = true
keyva-storage.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
hex.workspace = true
postcard.workspace = true
uuid.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
