[package]
name = "shroudb-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroudb-store.workspace = true

tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
