[package]
name = "shroudb-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Client SDK generator for the ShrouDB protocol"

[[bin]]
name = "shroudb-codegen"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
heck = "0.5"
