[package]
name = "shroudb-codegen"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Client SDK generator for the ShrouDB protocol"

[[bin]]
name = "shroudb-codegen"
path = "src/main.rs"

[dependencies]
shroudb-codegen-core = { path = "../../commons/shroudb-codegen-core" }
clap = { version = "4", features = ["derive"] }
