[package]
name = "shroudb-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroudb-core.workspace = true
shroudb-crypto.workspace = true
shroudb-storage.workspace = true

bytes.workspace = true
dashmap.workspace = true
reqwest.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
tokio.workspace = true
uuid.workspace = true
