[package]
name = "shroudb-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
shroudb-acl.workspace = true
shroudb-storage.workspace = true
shroudb-store.workspace = true

bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
tokio.workspace = true
