[package]
name = "shroudb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "shroudb"
path = "src/main.rs"

[dependencies]
shroudb-acl.workspace = true
shroudb-protocol.workspace = true
shroudb-store.workspace = true

# These will be replaced with shroudb-storage from registry once published for v1
# For now, use path override via .cargo/config.toml during development
shroudb-crypto.workspace = true
shroudb-storage.workspace = true
shroudb-telemetry.workspace = true
ring.workspace = true

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
toml.workspace = true
tracing.workspace = true
anyhow.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
hex.workspace = true
libc.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
shroudb-client.workspace = true
ring.workspace = true
rustls.workspace = true
rustls-pki-types.workspace = true
tokio-rustls.workspace = true
